# advent-2020

./: CNAME  Cargo.5a9e4742.toml  Cargo.toml  README.md  advent_2020_frontend_bg.d33d9faa.wasm  build-pages.sh  index.html  js.f2290d06.js  js.f2290d06.js.map
.github/workflows/: ci-tests.yml
day-01/: Cargo.toml
day-01/src/: lib.rs
day-02/: Cargo.toml
day-02/src/: lib.rs  password.rs
day-03/: Cargo.toml
day-03/src/: lib.rs  world.rs
day-04/: Cargo.toml
day-04/src/: lib.rs  passport.rs
day-05/: Cargo.toml
day-05/src/: boarding_pass.rs  lib.rs
day-06/: Cargo.toml
day-06/src/: lib.rs  questionnaire.rs
day-07/: Cargo.toml
day-07/src/: bags.rs  lib.rs
day-08/: Cargo.toml
day-08/src/: lib.rs
day-08/src/vm/: instruction.rs  mod.rs
day-09/: Cargo.toml
day-09/src/: lib.rs  xmas.rs
day-09/src/xmas/: sums.rs
day-10/: Cargo.toml
day-10/src/: jolts.rs  lib.rs
day-11/: Cargo.toml
day-11/src/: lib.rs  seats.rs
day-12/: Cargo.toml
day-12/src/: lib.rs  movement.rs  ship.rs
day-12/src/ship/: basic.rs  with_waypoint.rs
day-12/src/ship/basic/: orientation.rs
day-13/: Cargo.toml
day-13/src/: expr.rs  lib.rs
day-14/: Cargo.toml
day-14/src/: command.rs  lib.rs  memory.rs
frontend/: .gitignore  Cargo.toml  package-lock.json  package.json
frontend/src/: app.rs  days.rs  lib.rs  solution.rs
frontend/static/: index.html
frontend/static/js/: index.js
integration-test/: reference.txt
run-all/: Cargo.toml
run-all/src/: main.rs
